[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "fsspec>=2024.12.0",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "ruff>=0.8.3"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["requests"]
ignore_missing_imports = true
